--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@
                             <img src="https://static-cdn.jtvnw.net/ttv-boxart/18122-285x380.jpg" alt="Imagem do jogo World of Warcraft">
                         </a>
                     </li>
+
+                    <li>
+                        <a 
+                        target="_blank"
+                        href="https://www.twitch.tv/directory/game/Counter-Strike%3A%20Global%20Offensive">
+                            <img src="https://static-cdn.jtvnw.net/ttv-boxart/32399_IGDB-144x192.jpg" alt="Imagem do jogo Counter-Strike: Global Offensive">
+                        </a>
+                    </li>
                 </ul>
             </div>
         </section>
